Ventana de cohesionar etiquetas y generador de muestra + re-cal-22, plus tema oscuro/claro

--- a/Cohere/View/Cohere.xaml
+++ b/Cohere/View/Cohere.xaml
@@ -1,13 +1,245 @@
-<UserControl x:Class="Cohere.Cohere"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Cohere"
-             mc:Ignorable="d"
-             Background="Bisque"
-             d:DesignHeight="450" d:DesignWidth="800">
-  <Grid>
-    <Label VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="64">COHERE</Label>
-  </Grid>
+<UserControl
+    x:Class="Cohere.Cohere"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:core="clr-namespace:Core;assembly=Core"
+    xmlns:model="clr-namespace:Cohere.Model"
+    xmlns:viewmodel="clr-namespace:Cohere.ViewModel"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    d:DataContext="{d:DesignInstance Type=viewmodel:CohereViewModel}"
+    mc:Ignorable="d"
+    d:DesignHeight="450"
+    d:DesignWidth="800">
+    <UserControl.Resources>
+        <model:ProductErrorToBrushConverter
+            x:Key="PrdouctErrorColorConverter" />
+        <model:ProductErrorToBrushConverterFg
+            x:Key="PrdouctErrorForegroundColorConverter" />
+    </UserControl.Resources>
+
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="Auto" />
+            <RowDefinition
+                Height="*" />
+        </Grid.RowDefinitions>
+
+        <Menu>
+            <MenuItem
+                Header="Reglas">
+                <MenuItem
+                    Header="Crear Regla"
+                    Command="{Binding CreateRule}" />
+            </MenuItem>
+            <MenuItem
+                Header="_?">
+                <MenuItem
+                    Header="_Ayuda" />
+                <MenuItem
+                    Header="_Acerca de" />
+            </MenuItem>
+        </Menu>
+
+        <Grid
+            Margin="10"
+            Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition
+                    Width="20*" />
+                <ColumnDefinition
+                    Width="10" />
+                <ColumnDefinition
+                    Width="60*" />
+                <ColumnDefinition
+                    Width="10" />
+                <ColumnDefinition
+                    Width="30*" />
+            </Grid.ColumnDefinitions>
+
+            <DockPanel
+                LastChildFill="False">
+                <Button
+                    Margin="0,10"
+                    FontSize="14"
+                    VerticalAlignment="Bottom"
+                    DockPanel.Dock="Bottom"
+                    Command="{Binding GenerarMuestra}"
+                    Content="Generar Muestra" />
+                <TreeView
+                    x:Name="treeView"
+                    ItemsSource="{Binding RootDir}"
+                    FontSize="14">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger
+                            EventName="SelectedItemChanged">
+                            <i:InvokeCommandAction
+                                Command="{Binding OpenSelected}"
+                                CommandParameter="{Binding ElementName=treeView, Path=SelectedItem}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+
+                    <TreeView.Resources>
+                        <HierarchicalDataTemplate
+                            DataType="{x:Type core:LabelDir}"
+                            ItemsSource="{Binding Items}">
+                            <TextBlock
+                                Text="{Binding Name}"
+                                FontWeight="DemiBold" />
+                        </HierarchicalDataTemplate>
+
+                        <DataTemplate
+                            DataType="{x:Type core:LabelFile}">
+                            <TextBlock
+                                HorizontalAlignment="Stretch"
+                                Text="{Binding Name}" />
+                        </DataTemplate>
+                    </TreeView.Resources>
+                </TreeView>
+            </DockPanel>
+
+            <GridSplitter
+                Grid.Column="1"
+                Background="{x:Null}"
+                HorizontalAlignment="Stretch" />
+
+            <DockPanel
+                Grid.Column="2">
+                <TextBlock
+                    FontWeight="DemiBold"
+                    FontSize="16"
+                    Margin="0,10"
+                    DockPanel.Dock="Top"
+                    Text="{Binding CurrentLabel}" />
+                <DockPanel
+                    Margin="0,10"
+                    Background="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
+                    DockPanel.Dock="Bottom"
+                    LastChildFill="False"
+                    VerticalAlignment="Bottom">
+                    <Label
+                        Margin="5,0"
+                        FontSize="14"
+                        HorizontalAlignment="Stretch"
+                        VerticalContentAlignment="Center"
+                        Content="{Binding ReglaNombre}"
+                        ContentStringFormat="Regla Aplicada: {0}" />
+                    <Button
+                        DockPanel.Dock="Right"
+                        Command="{Binding ChangeRule}"
+                        CommandParameter="{Binding ElementName=treeView, Path=SelectedItem}">
+                        <Image
+                            Margin="2,5"
+                            Width="16">
+                            <Image.Source>
+                                <BitmapImage
+                                    UriSource="/Cohere;component/Resources/change-rule.png" />
+                            </Image.Source>
+                        </Image>
+                    </Button>
+                </DockPanel>
+                <DataGrid
+                    x:Name="dataGrid"
+                    ItemsSource="{Binding ProductsList}"
+                    AutoGenerateColumns="False"
+                    IsReadOnly="True"
+                    FontSize="14">
+                    <DataGrid.RowStyle>
+                        <Style
+                            BasedOn="{StaticResource {x:Type DataGridRow}}"
+                            TargetType="{x:Type DataGridRow}">
+                            <Setter
+                                Property="Background"
+                                Value="{Binding Error, Converter={StaticResource PrdouctErrorColorConverter}}" />
+                        </Style>
+                    </DataGrid.RowStyle>
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn
+                            Header="Codigo"
+                            Binding="{Binding Codigo}" />
+                        <DataGridTextColumn
+                            Header="Nombre"
+                            Binding="{Binding Nombre}" />
+                    </DataGrid.Columns>
+
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger
+                            EventName="SelectionChanged">
+                            <i:InvokeCommandAction
+                                Command="{Binding LoadSelected}"
+                                CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}" />
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
+                </DataGrid>
+            </DockPanel>
+
+            <GridSplitter
+                Grid.Column="3"
+                Background="{x:Null}"
+                HorizontalAlignment="Stretch" />
+
+            <DockPanel
+                Grid.Column="4"
+                Background="{DynamicResource {x:Static adonisUi:Brushes.Layer4BackgroundBrush}}"
+                LastChildFill="False">
+                <Border
+                    BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer3BorderBrush}}"
+                    BorderThickness="5"
+                    Background="{DynamicResource {x:Static adonisUi:Brushes.Layer3BackgroundBrush}}"
+                    DockPanel.Dock="Bottom">
+                    <StackPanel
+                        Margin="5,0,5,25">
+                        <Label
+                            FontSize="18"
+                            Margin="0,0,0,15"
+                            FontWeight="DemiBold"
+                            Content="Reporte" />
+                        <TextBlock
+                            FontSize="14"
+                            Text="{Binding FoundErrors, StringFormat='Errores encontrados: {0}'}" />
+                    </StackPanel>
+                </Border>
+                <ItemsControl
+                    ItemsSource="{Binding SelectedValues}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate
+                            DataType="{x:Type core:Valor}">
+                            <Label
+                                FontWeight="Regular"
+                                Margin="10,10"
+                                FontSize="16">
+                                <Label.Style>
+                                    <Style
+                                        BasedOn="{StaticResource {x:Type Label}}"
+                                        TargetType="{x:Type Label}">
+                                        <Setter
+                                            Property="Foreground"
+                                            Value="{Binding Error, Converter={StaticResource PrdouctErrorForegroundColorConverter}}" />
+                                    </Style>
+                                </Label.Style>
+
+                                <Label.Content>
+                                    <TextBlock>
+                                        <TextBlock.Text>
+                                            <MultiBinding
+                                                StringFormat="{}{0}: {1}">
+                                                <Binding
+                                                    Path="Atributo" />
+                                                <Binding
+                                                    Path="Valores" />
+                                            </MultiBinding>
+                                        </TextBlock.Text>
+                                    </TextBlock>
+                                </Label.Content>
+                            </Label>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </DockPanel>
+        </Grid>
+    </Grid>
 </UserControl>
